--- a/nbpl.html
+++ b/nbpl.html
@@ -12,6 +12,16 @@
       margin: 0;
       padding: 0;
     }
+    .ct {
+			height: 50%;
+			width: 50%;
+			position: fixed;
+			top: 0;
+			right: 0;
+			bottom: 0;
+			left: 0;
+			margin: auto;
+    }
     .plyr {
       margin: 0 auto;
       max-width: 640px;
@@ -27,17 +37,18 @@
   </style>
 </head>
 <body>
+    <div class="ct">
   <div class="plyr">
     <video autoplay muted controls crossorigin playsinline>
-      <source src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-576p.mp4" type="video/mp4">
+      <source src="https://fast-waller.github.io/resource/MP4/nbpl.mp4" type="video/mp4">
       <!-- 如果需要支持其他格式的视频，可以添加对应的 <source> 标签 -->
       <!-- <source src="movie.ogg" type="video/ogg"> -->
       <!-- <source src="movie.webm" type="video/webm"> -->
       <!-- fallback for older browsers without Plyr support -->
-      <a href="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-576p.mp4">Download</a>
+      <a href="https://fast-waller.github.io/resource/MP4/nbpl.mp4">Download</a>
     </video>
   </div>
-
+</div>
   <!-- 添加自动播放被禁用时的提示信息 -->
   <div id="autoplay-message">
     <p>请点击下方按钮以启动视频播放：</p>
@@ -48,6 +59,7 @@
   <!-- 注意：你需要使用一个不能被阻止的链接来引用 Plyr JavaScript -->
   <script>
     const player = new Plyr('video', {
+      loop: { "active": true },
       captions: { active: true },
       // 如果需要添加播放列表，可以在以下位置添加
       // playlist: {
