--- a/nbpl.html
+++ b/nbpl.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Plyr Video Player</title>
+  <title>你被骗了</title>
   <link rel="stylesheet" href="https://cdn.plyr.io/3.6.4/plyr.css" />
   <!-- 注意：你需要使用一个不能被阻止的链接来引用 Plyr CSS 样式 -->
   <style>
