--- a/sound/nbpl.html
+++ b/sound/nbpl.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Plyr 音频播放器</title>
+    <title>你被骗了</title>
     <link rel="stylesheet" href="https://cdn.plyr.io/3.6.8/plyr.css" />
     <link href="css\styles.css" rel="stylesheet" type="text/css" />
 
