--- a/video/nbpl.html
+++ b/video/nbpl.html
@@ -12,12 +12,12 @@
           你被骗了
   <div class="plyr">
     <video autoplay muted controls crossorigin playsinline loop>
-      <source src="https://fast-waller.github.io/resource/MP4/nbpl.mp4" type="video/mp4">
+      <source src="https://fast-waller.github.io/resource/mp4/nbpl.mp4" type="video/mp4">
       <!-- 如果需要支持其他格式的视频，可以添加对应的 <source> 标签 -->
       <!-- <source src="movie.ogg" type="video/ogg"> -->
       <!-- <source src="movie.webm" type="video/webm"> -->
       <!-- fallback for older browsers without Plyr support -->
-      <a href="https://fast-waller.github.io/resource/MP4/nbpl.mp4">Download</a>
+      <a href="https://fast-waller.github.io/resource/mp4/nbpl.mp4">Download</a>
     </video>
   </div>
 </div>
