--- a/audio/music.html
+++ b/audio/music.html
@@ -14,7 +14,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="#">联系我们&提出新歌要求</a></li>
+        <li><a href="../contact/">联系我们&提出新歌要求</a></li>
         <li>© 2023 Phantom-Shadow.<a href="https://plyr.io" target="_blank">使用plyr播放器</a></li>
       </ul>
     </nav>
